[package]
name = "smartextract"
version = "0.1.0"
authors = ["Max Sistemich <maximilian.sistemich@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
regex = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xdg = "*"
anyhow = "*"
clap = { git = "https://github.com/clap-rs/clap/" }

[dev-dependencies]
matches = "*"