[package]
name = "smartextract"
version = "0.1.0"
authors = ["Max Sistemich <maximilian.sistemich@rwth-aachen.de>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xdg = "2.2.0"
anyhow = "1.0.26"
clap = { git = "https://github.com/clap-rs/clap/" }
